--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "job-application-tracker",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "description": "A data-driven job search assistant - Personal productivity platform with full-stack capabilities",
   "type": "module",
   "scripts": {
@@ -25,23 +25,25 @@
   "author": "Zawadi MC Nyachiya",
   "license": "MIT",
   "devDependencies": {
+    "@types/animejs": "^3.1.13",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
-    "@vitest/ui": "^1.0.4",
+    "@vitest/ui": "^4.0.16",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
-    "vite": "^5.0.5",
-    "vitest": "^1.0.4"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
-    "chart.js": "^4.4.0",
     "@nanostores/persistent": "^0.9.0",
-    "nanostores": "^0.9.0",
-    "motion": "^10.16.4"
+    "animejs": "^4.2.2",
+    "chart.js": "^4.4.0",
+    "motion": "^10.16.4",
+    "nanostores": "^0.9.0"
   }
 }
